# phig-py

./: .gitignore  .gitmodules  Cargo.toml  pyproject.toml
phig/: __init__.py  _error.py  _parse.py  _serialize.py
src/: lib.rs
tests/: test_api.py  test_conformance.py
