[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phig"
version = "0.1.0"
description = "Parser and serializer for the Phig configuration language"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
