[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phig"
version = "0.2.0"
description = "Parser and serializer for phig"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.maturin]
module-name = "phig._phig"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
